--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
 <body>
     <div class="main-content">
       {{>header}}
+      <p>This site was created by Bastin Jafari. It uses data from mapbox.com and darkskies.net</p>
       <img class="portrait" src="img/this-woman-yelling-at-a-cat-meme-is-still-my-favo-2-7263-1574449806-0_dblbig.jpg"> 
 
     </div>
